[package]
name = "ale"
version = "0.1.2"
authors = ["Callum Tolley <cgtrolley@gmail.com>"]
edition = "2018"
description = "A Rust encapsulation of the Arcade Learning Environment"
documentation = "https://docs.rs/ale"
homepage = "https://github.com/trolleyman/ale-rs"  # TODO: Update to trolleyman.org
repository = "https://github.com/trolleyman/ale-rs"
license = "MIT"
readme = "README.md"

include = [
	"src",
	"roms",
	"Cargo.toml",
]

[workspace]
members = ["ale-sys"]

[dependencies]
ale-sys = { path = "ale-sys", version = "0.1.1" }
tempdir = "0.3.7"

[dev-dependencies]
rand = "0.7.3"
winit = "0.20.0-alpha4"
winit_input_helper = "0.4.0-alpha4"
