[package]
name = "ale"
version = "0.1.3"
authors = ["Callum Tolley <cgtrolley@gmail.com>"]
edition = "2018"
description = "A Rust encapsulation of the Arcade Learning Environment"
documentation = "https://docs.rs/ale"
homepage = "https://github.com/trolleyman/ale-rs"  # TODO: Update to trolleyman.org
repository = "https://github.com/trolleyman/ale-rs"
license = "MIT"
readme = "README.md"

include = [
	"src",
	"roms",
	"Cargo.toml",
]

[workspace]
members = ["ale-sys"]

[dependencies]
ale-sys = { path = "ale-sys", version = "0.1.1" }
tempdir = "0.3.7"

[dev-dependencies]
rand = "0.7.3"
winit = "0.21.0"
winit_input_helper = "0.5.0"
pixels = "0.0.2"
