[package]
name = "ale-xtask"
version = "0.1.0"
authors = ["Callum Tolley <cgtrolley@gmail.com>"]
edition = "2018"
description = "Build runner for ale"
publish = false

[workspace]

[dependencies]
clap = "2.33.0"
fs_extra = "1.1.0"
bindgen = "0.53.1"
tempdir = "0.3.7"
reqwest = { version = "0.10.1", features = ["blocking"] }
tar = "0.4.26"
flate2 = "1.0.13"
